# scorm-builder

./: .gitignore  ACCESSIBILITY_AND_INTEGRATION.md  ARCHITECTURE_AUDIT_REQUEST.md  BEHAVIOR_TESTING_REQUIREMENTS.md  BEHAVIOR_TEST_REPORT.md  BUNDLE_OPTIMIZATION.md  CLEANUP_COMPLETE.md  CLEANUP_LOG.md  COMPONENT_BEHAVIORS.md  DETAILED_APP_DOCUMENTATION.md  IMPLEMENTATION_PLAN.md  LARGE_TEST_REFACTORING_PLAN.md  README.md  README.old.md  README.txt  REFACTORING_EXAMPLES.md  REFACTORING_GUIDE.md  SCORM-Builder-Blueprint.md  SCORM_BUILDER_UX_AUDIT_REPORT.md  SCORM_GENERATION_DETAILS.md  SECURITY_AUDIT_REPORT.md  SECURITY_MIGRATION_GUIDE.md  SECURITY_QUICKSTART.md  STORAGE_PERSISTENCE_DETAILS.md  TDD_PATTERNS_GUIDE.md  TDD_REFACTORING_PLAN.md  TEST_CLEANUP_SUMMARY.md  TEST_REPORT.md  TEST_WORKAROUND_ANALYSIS.md  VERSION_STABILITY_REPORT.md  audio-narration-mockup.html  check-frontend-mode.bat  clean-build.bat  dev-clean.bat  dev-with-logging.bat  package-lock.json  package.json  portable-build-debug.bat  portable-build-simple.bat  run-portable-build.cmd  (+8 more)
scorm-builder/src-tauri/: Cargo.toml  tauri.conf.json  tauri.portable.conf.json
scorm-builder/src-tauri/assets/: scorm_api.js
scorm-builder/src-tauri/capabilities/: automation.json  default.json
scorm-builder/src-tauri/icons/: generate-from-png.js  generate-icons.js  generate-icons.md  icon.icns  process-icon.js  regenerate-icons.ps1
scorm-builder/src-tauri/src/: api_keys.rs  backup_recovery.rs  commands.rs  commands_secure.rs  error.rs  lib.rs  localstorage_migration.rs  main.rs  media_page_id_migration.rs  settings.rs  (+10 more)
(+1893 files in other folders)
